# gst-teletext

./: AUTHORS  autogen.sh  configure.ac
examples/: Makefile  test-ui.c
src/: Makefile.am  gstteletext.c  gstteletext.h  gstteletextdec.c  gstteletextdec.h  teletext.c
